--- a/Silver/1912/1912.md
+++ b/Silver/1912/1912.md
@@ -3,10 +3,6 @@
 <ul>
     <li>n개의 정수로 이루어진 임의의 수열이 주어진다. 우리는 이 중 연속된 몇 개의 수를 선택해서 구할 수 있는 합 중 가장 큰 합을 구하려고 한다. 단, 수는 한 개 이상 선택해야 한다.</li>
     <li>예를 들어서 10, -4, 3, 1, 5, 6, -35, 12, 21, -1 이라는 수열이 주어졌다고 하자. 여기서 정답은 12+21인 33이 정답이 된다.</li>    
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
 </ul>
 
 <h2>[입/출력]</h2>
@@ -22,24 +18,39 @@
     <li>예를 들어, [양수들] [음수들] [양수들] 로 수열이 구성된 경우 가운데 있는 음수들의 합의 크기가 앞선 양수들의 합의 크기보다 작은 경우 전체 수열의 합이 연속된 수열에서 가장 큰 합을 구할 수 있고 그 크기가 음수쪽이 더 큰 경우 앞선 양수까지 연속된 수열로 포함하지 않아야 함</li>
     <li>-3, 4, 1 인 경우 앞의 음수는 포함하지 않고 뒤의 양수만 구성된 수열에서 가장 큰 합을 구할 수 있고 4, -3, -2, 6에서 가운데 음수를 포함하지 않는 것이 가장 큰 합을 구할 수 있게 된다.</li>
     <li>즉, 양->음->양 으로 넘어가는 경우 음수 포함 여부를 결정하는 것이 중요함</li>
-    <li>정리를 하자면, 경우의 수로 앞선 수열에서 합이 +, -인 경우와 특정 위치의 원소가 +, -인경우로 네가지 경우가 있는데</li>
+    <li>정리를 하자면, 경우의 수로 앞선 수열에서 합이 +, -인 경우와 특정 위치의 원소가 +, -인경우로 네가지 경우가 있는데 아래와 같다.</li>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>앞선 수열의 합이 +, 특정 원소가 + : 두 값 합하기</li>
+        <li>앞선 수열의 합이 +, 특정 원소가 - : 두 값 합하기</li>
+        <li>앞선 수열의 합이 -, 특정 원소가 + : 특정 양의 원소 값으로 대체</li>
+        <li>앞선 수열의 합이 -, 특정 원소가 - : 특정 음의 원소 값 대체</li>
     </ol>
 </ul>
 
 <h2>[핵심]</h2>
 <ul>
     <li>특정 위치에서 앞선 수열에서 양수만, 양수와 음수로 구성된 연속된 수열의 합이 양수인지 음수인지에 따라 특정위치에서의 원소를 합할지 새로 수열을 시작할지 결정해야 함</li>
+    <li>각각의 경우로 나누어 생각하면 편하게 부분 해를 통해 구할 수 있음</li>
 </ul>
 
 <h2>[코드]</h2>
 
 ```python
+import sys
+input = sys.stdin.readline
 
+n = int(input())
+arr = list(map(int, input().split()))
+
+arr_sum = [0] * n
+arr_sum[0] = arr[0]
+for i in range(1, n):
+    if arr_sum[i-1] > 0 :
+        arr_sum[i] = arr_sum[i-1]+arr[i]
+    else:
+        arr_sum[i] = arr[i]
+        
+print(max(arr_sum))
 ```
 
 
