--- a/Silver/1912/1912.md
+++ b/Silver/1912/1912.md
@@ -53,4 +53,26 @@ for i in range(1, n):
 print(max(arr_sum))
 ```
 
+```python
+import sys
+input = sys.stdin.readline
+
+n = int(input())
+arr = list(map(int, input().split()))
+
+arr_sum = [0] * n
+arr_sum[0] = arr[0]
+for i in range(1, n):
+    if arr_sum[i-1] >0 and arr[i] >0 : 
+        arr_sum[i] = arr_sum[i-1] + arr[i]
+    elif arr_sum[i-1] >0 and arr[i] <0 :
+        arr_sum[i] = arr_sum[i-1] + arr[i]
+    elif arr_sum[i-1] <0 and arr[i] >0 :
+        arr_sum[i] =  arr[i]
+    else
+        arr_sum[i] = arr[i]
+        
+print(max(arr_sum))
+```
+
 
