--- a/Silver/2606/2606.md
+++ b/Silver/2606/2606.md
@@ -62,4 +62,35 @@ x = len(find_set(linked, 1)) -1
 print(x)
 ```
 
+```python
+from collections import deque
+import sys
+input = sys.stdin.readline
+
+N = int(input())
+n = int(input())
+graph = [[] for _ in range(N+1)] # 편의상 0 추가
+for _i in range(n):
+    _x, _y = map(int, input().split())
+    graph[_x].append(_y)
+    graph[_y].append(_x)
+bfs_check= [0] * (N+1)
+bfs_route = []
+
+def bfs(start):
+    q= deque()
+    q.append(start)
+    bfs_check[start] = 1
+    while q:
+        a = q.popleft()
+        bfs_route.append(a)
+        for i in graph[a]:
+            if bfs_check[i] ==0:
+                bfs_check[i]=1
+                q.append(i)
+    return bfs_route
+bfs(1)
+print(len(bfs_route)-1)
+```
+
 
