--- a/Silver/20291/20291.md
+++ b/Silver/20291/20291.md
@@ -25,28 +25,60 @@
 
 <h2>[알고리즘 분류]</h2>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>자료 구조</li>
+    <li>문자열</li>
+    <li>정렬</li>
+    <li>파싱</li>
+    <li>트리를 사용한 집합과 맵</li>
+    <li>해시를 사용한 집합과 맵</li>
 </ul>
 
 <h2>[풀이]</h2>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>dictionary 타입으로 key와 value로 특정 key가 존재하면 값을 +1 해주고 새로운 값이라면 추가하여 1 값을 넣어준다.</li>
+    <li>split을 하기 위해 strip()으로 공백 제거를 실시한다. 이를 하지 않고 그냥 split을 하면 공백과 줄바꿈이 포함된다.</li>
+    <li>key값을 알면 dict[key]로 바로 value에 접근이 가능하다.</li>
 </ul>
 
 <h2>[핵심]</h2>
 <ul>
-    <li></li>
+    <li>strip을 통해 공백 제거 +) strip/lstrip/rstrip</li>
+    <li>dictionary에 key가 있는지 확안 : if key in dict</li>
+    <li>sorted(dict.keys()) : key값만 정렬하여 보여줌</li>
+    <li>sorted(dict.items()) : key값 정렬 후 value와 같이 보여줌</li>
 </ul>
 
 <h2>[코드]</h2>
 
 ```python
+import sys
+input = sys.stdin.readline
 
+N = int(input())
+dict = {}
+for i in range(N):
+    x, y = input().strip().split(".") # strip으로 공백 제거
+    if y in dict:
+        dict[y] += 1
+    else:
+        dict[y] = 1
+for key in sorted(dict.keys()):
+    print(key, dict[key])
+```
+
+```python
+import sys
+
+n = int(sys.stdin.readline())
+ext_dict = {}
+for i in range(n):
+    _, ext = sys.stdin.readline().rstrip().split(".")
+    if ext_dict.get(ext):
+        ext_dict[ext] += 1
+    else:
+        ext_dict[ext] = 1
+for key in sorted(ext_dict.keys()):
+    print('{} {}'.format(key, ext_dict[key]))
 ```
 
 
