--- a/Silver/1972/1972.md
+++ b/Silver/1972/1972.md
@@ -22,20 +22,50 @@
 
 <h2>[풀이]</h2>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>'*'가 나올 때까지 입력받고 '*'가 나오면 N에 문자열 추가를 멈춘다.</li>
+    <li>문자열에서 간격을 0부터 문자열길이-2 로 설정하고 각 경우에 따라 문자를 집합에 추가한다.</li>
+    <li>집합의 길이로 문자열이 유일한지 판단할 것인데 집합의 길이가 문자열길이-1-간격과 같으면 간격에 따라 모든 문자가 겹치지 않으므로 유일하다.</li>
 </ul>
 
 <h2>[핵심]</h2>
 <ul>
-    <li></li>
+    <li>문자열이 유일한지 판단하기 위해 집합을 통해 겹치는 문자는 제거하고 집합의 길이를 이용한다.</li>
 </ul>
 
 <h2>[코드]</h2>
 
 ```python
+import sys
+input = sys.stdin.readline
 
+def sup(M):
+    m = len(M)
+    result = True
+    if m >1:
+        itv = [i for i in range(m-1)]
+        for i in itv:
+            s = set()
+            for j in range(m-1-i):
+                _x = M[j]+M[j+1+i]
+                s.add(_x)
+            if len(s) != m-1-i:
+                result = False
+        return result
+    else:
+        return True
+    
+N = []
+while True:
+    a = input().rstrip()
+    if a == '*':
+        break
+    N.append(a)
+n = len(N)
+for i in range(n):
+    if sup(N[i]) == True:
+        print(N[i], 'is surprising.')
+    else:
+        print(N[i], 'is NOT surprising.')
 ```
 
 
