--- a/Silver/19948/19948.md
+++ b/Silver/19948/19948.md
@@ -27,20 +27,61 @@
 
 <h2>[풀이]</h2>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>먼저 space바 사용이 가능한지를 파악하기 위해 split()을 통해 몇 번의 space바가 사용되는지 파악한다.</li>
+    <li>다음으로 나눈 각 문자에 대해 ord를 통해 알파벳을 숫자로 변환하고 입력한 사용 횟수에서 알파벳이 나온 만큼을 제한다.</li>
+    <li>앞 알파벳과 동일한 경우 -1을 원상복구 하기 위해 +1을 해준다.</li>
+    <li>시의 내용을 모두 입력 가능하면 다음으로 제목이 입력 가능한지 판단해야 한다.</li>
+    <li>제목은 각 단어의 앞 문자만을 대문자로 변경하여 기록하므로 먼저 제목을 추출하고 마찬가지로 알파벳 사용이 가능한지 판단한다.</li>
+    <li>시의 내용과 제목 모두 기록이 가능하면 제목을 저장한 string을 그대로 출력하고 아닌 경우는 -1을 출력한다.</li>
 </ul>
 
 <h2>[핵심]</h2>
 <ul>
-    <li></li>
+    <li>문제를 잘 읽자 : 시의 내용만이 아니라 제목도 출력 가능해야 함을 나중에 알았음</li>
+    <li>조건 : space바, 알파벳 사용 횟수, 앞자리와 같은 알파벳 사용(대소문자 구분)</li>
+    <li>시의 내용이 입력이 가능한 경우 제목을 추출해 제목 출력 또한 가능한지 나누어서 생각</li>
+
 </ul>
 
 <h2>[코드]</h2>
 
 ```python
+import sys
+input = sys.stdin.readline
 
+poem = input().strip().split()
+space = int(input())
+alpha = list(map(int, input().split()))
+result = True
+
+if len(poem)-1 > space:
+    result = False
+else:
+    s = len(poem)
+    for i in range(s):
+        string_i = poem[i]
+        for j in range(len(string_i)):
+            num = ord(string_i[j].lower())-97
+            alpha[num] -= 1
+            if j>=1 and (string_i[j] == string_i[j-1]):
+                alpha[num] += 1
+            if alpha[num] <0:
+                result = False
+    if result == True:
+        string = ''
+        for i in range(s):
+            string = string + poem[i][0].upper()
+        for i in range(len(string)):
+            num = ord(string[i].lower())-97
+            alpha[num] -= 1
+            if i>=1 and (string[i] == string[i-1]):
+                alpha[num] += 1
+            if alpha[num] <0:
+                result = False
+if result == True:
+    print(string)
+else:
+    print(-1)
 ```
 
 
