--- a/Silver/2022/2022.md
+++ b/Silver/2022/2022.md
@@ -22,20 +22,77 @@
 
 <h2>[풀이]</h2>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>get_height함수를 만들어 특정 너비일 때의 높이를 계산한다.</li>
+    <li>계산한 높이 h와 실제 수치 c를 비교한다.</li>
+    <li>h가 c보다 크거나 같은 경우 너비 시작점을 mid로, 그 반대인 경우 너비 끝점을 mid로 설정한다.</li>
 </ul>
 
 <h2>[핵심]</h2>
 <ul>
-    <li></li>
+    <li>실제 높이와 계산된 높이를 비교하여 이분 탐색</li>
+    <li>질문 : 왜 여기 이분 탐색에서는 +/- 1을 하지 않는가????</li>
 </ul>
 
 <h2>[코드]</h2>
 
 ```python
+import sys
+input = sys.stdin.readline
+import math
 
+def get_height(x, y, w):
+    h1 = math.sqrt(x**2-w**2)
+    h2 = math.sqrt(y**2-w**2)
+    h = h1*h2/(h1+h2)
+    return h
+
+x, y, c = map(float, input().split())
+w_s = 0
+w_e = min(x, y)
+dif = 1
+res_w = 0
+
+while (w_e - w_s) >= 10**(-6) :
+    mid = (w_s+w_e)/2
+    h = get_height(x, y, mid)
+    if h >= c :
+        w_s = mid
+    else:
+        w_e = mid
+    res_w = mid
+print(res_w)
+```
+
+```python
+import sys
+input = sys.stdin.readline
+import math
+
+def get_height(x, y, w):
+    h1 = math.sqrt(x**2-w**2)
+    h2 = math.sqrt(y**2-w**2)
+    h = h1*h2/(h1+h2)
+    return h
+
+x, y, c = map(float, input().split())
+w_s = 0
+w_e = min(x, y)
+dif = 1
+res_w = 0
+while True :
+    mid = (w_s+w_e)/2
+    h = get_height(x, y, mid)
+    dif = abs(c-h)
+    if dif > 10**(-6):
+        if c >= h:
+            w_e = mid
+        else:
+            w_s = mid
+    else:
+        res_w = mid
+        break
+        
+print(res_w)
 ```
 
 
