--- a/Silver/2805/2805.md
+++ b/Silver/2805/2805.md
@@ -24,20 +24,56 @@
 
 <h2>[풀이]</h2>
 <ul>
-    <li></li>
-    <li></li>
+    <li>특정 높이 mid를 각 나무 높이에서 빼 양수인 경우의 숫자 합들을 가져가고자 하는 나무 길이와 비교한다.</li>
+    <li>가져갈 나무 길이보다 더 길게 자른 경우 start = mid+1, 그 반대인 경우 end = mid-1로 설정해서 이분탐색을 반복한다.</li>
     <li></li>
 </ul>
 
 <h2>[핵심]</h2>
 <ul>
-    <li></li>
+    <li>Pyhon3에서는 시간초과 발생 => PyPy3에서는 잘 돌아감</li>
 </ul>
 
 <h2>[코드]</h2>
 
 ```python
+import sys
+input = sys.stdin.readline
 
+N, M = map(int, input().split())
+height = list(map(int, input().split()))
+s, e = 1, max(height)
+
+while e-s >=0:
+    mid = (s+e)//2
+    tree = 0
+    for i in height:
+        tree += max(i-mid, 0)
+    if tree >= M:
+        s = mid +1
+    else:
+        e = mid -1
+print(e)
 ```
 
+```python
+import sys
+input = sys.stdin.readline
+
+N, M = map(int, input().split())
+height = list(map(int, input().split()))
+start, end = 0, max(height)
+
+while end >= start:
+    mid = (start+end)//2
+    tree = 0
+    for i in height:
+        if i > mid:
+            tree += (i-mid)
+    if tree >= M:
+        start = mid+1
+    else:
+        end = mid-1
+print(end)
+```
 
