--- a/Silver/1654/1654.md
+++ b/Silver/1654/1654.md
@@ -21,7 +21,7 @@
 <h2>[풀이]</h2>
 <ul>
     <li>이분 탐색을 위해 최소값 1, 최대값을 변수로 설정한다.</li>
-    <li>=각 랜선의 길이에 mid값을 나누어 특정 값에 따라 만들 수 있는 랜선의 개수를 구한다.</li>
+    <li>각 랜선의 길이에 mid값을 나누어 특정 값에 따라 만들 수 있는 랜선의 개수를 구한다.</li>
     <li>필요한 랜선 개수보다 많은 경우와 적은 경우로 나누어 생각한다.</li>
 </ul>
 
