--- a/Silver/1890/1890.md
+++ b/Silver/1890/1890.md
@@ -9,7 +9,7 @@
 <h2>[입/출력]</h2>
 <ul>
     <li>입력 : 첫째 줄에 게임 판의 크기 N (4 ≤ N ≤ 100)이 주어진다. 그 다음 N개 줄에는 각 칸에 적혀져 있는 수가 N개씩 주어진다. 칸에 적혀있는 수는 0보다 크거나 같고, 9보다 작거나 같은 정수이며, 가장 오른쪽 아래 칸에는 항상 0이 주어진다.</li>
-    <li>출력 : 가장 왼쪽 위 칸에서 가장 오른쪽 아래 칸으로 문제의 규칙에 맞게 갈 수 있는 경로의 개수를 출력한다. 경로의 개수는 263-1보다 작거나 같다.</li>
+    <li>출력 : 가장 왼쪽 위 칸에서 가장 오른쪽 아래 칸으로 문제의 규칙에 맞게 갈 수 있는 경로의 개수를 출력한다. 경로의 개수는 2^63-1보다 작거나 같다.</li>
 </ul>
 
 <h2>[알고리즘 분류]</h2>
@@ -27,6 +27,7 @@
 <h2>[핵심]</h2>
 <ul>
     <li>특정위치까지 이동 경로를 다음으로 이동 가능한 위치까지 전달하는 것 => DP</li>
+    <li>조건 : N*N을 벗어나지 않아야 함, 이동하였을 때 벗어나지 않는 경우 경로를 추가한다.</li>
 </ul>
 
 <h2>[코드]</h2>
